# ENCH320-Labs

./: Google_Colab_Guide.md  Lab 0-Introduction to google colab.ipynb  Lab_00_Introduction_to_google_colab.ipynb  Lab_01_Python_Basics.ipynb  Lab_02_Control_Flow.ipynb  Lab_03_Looping.ipynb  Lab_04_Functions.ipynb  Lab_05_Data_Structures.ipynb  Lab_05_Python_Data_Structure.ipynb  Lab_06_Introduction_to_NumPy.ipynb  Lab_07_Introduction_to_Matplotlib.ipynb  Lab_08_Introduction_to_Sympy (2).ipynb  Lab_08_Introduction_to_Sympy.ipynb  Lab_09_Root_Finding.ipynb  Lab_10_Numerical_Differentiation (1).ipynb  Lab_10_Numerical_Differentiation.ipynb  Lab_11_Numerical_Integration.ipynb  Lab_2_Restructured.ipynb  Lab_55_Data_Structures.ipynb  Notebook_01_Python_Basics.ipynb  Notebook_02_Control_Flow.ipynb  Notebook_03_Functions.ipynb  Notebook_03_Looping.ipynb  Notebook_04_Data_Structures.ipynb  Notebook_04_Functions.ipynb  Notebook_05_Strings.ipynb  Notebook_06_File_IO_and_Errors.ipynb  Notebook_06_Strings.ipynb  Notebook_07_Advanced_Functions.ipynb  Notebook_08_Advanced_Functions.ipynb  Notebook_08_OOP_Basics.ipynb  Notebook_09_Libraries.ipynb  Notebook_09_OOP_Basics.ipynb  Notebook_10_Integration_Project.ipynb  Notebook_10_Libraries.ipynb  Notebook_11_Integration_Project.ipynb  README.md  _arabic_markdown_targets.json  _extract_arabic_md.py  add_arabic_looping.py  (+13 more)
.ipynb_checkpoints/: Lab 0-Introduction to google colab-checkpoint.ipynb
